tests/Types/fail/unknown-name.ts
import { route } from "@ninots/routing";

route("does.not.exist");
